--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,47 @@ experience {
     top: 0;
     left: 0;
 }
+
+
+/* Mobile controls */
+
+.mobile-control {
+  z-index: 500;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  cursor: pointer;
+  transform: translate(-50%, -50%);
+  background: indianred;
+  height: 64px;
+  width: 64px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid white;
+  padding: 8px;
+  transition: background 0.4s ease-in;
+  transition-delay: 0.1s;
+}
+
+.left-arrow {
+  transform: translate(calc(-100% - 32px), -50%) rotate(270deg);
+}
+
+.right-arrow {
+  transform: translate(32px, -50%) rotate(90deg);
+}
+
+.up-arrow {
+  transform: translate(-50%, calc(-100% - 32px)) rotate(0deg);
+}
+
+.down-arrow {
+  transform: translate(-50%, 32px) rotate(180deg);
+}
+
+@media (max-width: 1100px) {
+  .mobile-control {
+    display: flex;
+  }
+}
